Fix double border when Configurator is collapsed

--- a/assets/styles/filament-components.css
+++ b/assets/styles/filament-components.css
@@ -75,6 +75,7 @@
     display: -webkit-flex;
     -webkit-flex-flow: column;
     position: relative;
+    border-left: 1px solid hsl(0, 0%, 75%);
     background: hsl(0, 0%, 86%);
     -webkit-transition: -webkit-flex .3s cubic-bezier(.26, .06, .08, 1);
 }
