--- a/ui/template-explorer.reel/template-explorer.css
+++ b/ui/template-explorer.reel/template-explorer.css
@@ -4,6 +4,10 @@
     background: hsl(0, 0%, 80%);
 }
 
+.TemplateExplorer.ComponentEditor-column {
+    border-left: none;
+}
+
 .TemplateExplorer.Filament--willAcceptDrop {
     outline: none;
 }
